common/istio-1-24/cluster-local-gateway/overlays/oauth2-proxy/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: cluster-local-gateway
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: cluster-local-gateway
      istio: cluster-local-gateway
  action: ALLOW
  rules:
  # Rule 1: External access (via header, for completeness, can allow other namespaces also, in values)
  - to:
    - operation:
        hosts: ["*.kubeflow-user-example-com.svc.cluster.local"]
    when:
    - key: request.headers[kubeflow-userid]
      values: ["system:serviceaccount:kubeflow-user-example-com:*"]

  # Rule 2: Internal access (via JWT sub claim)
  - to:
    - operation:
        hosts: ["*.kubeflow-user-example-com.svc.cluster.local"]
    when:
    - key: request.auth.claims[sub]
      values: ["system:serviceaccount:kubeflow-user-example-com:*"]

  # Rule 3: Allow system health checks
  - to:
    - operation:
        paths: ["/healthz", "/metrics", "/wait-for-drain"]
